--- a/example/qmik/view/home.html
+++ b/example/qmik/view/home.html
@@ -15,11 +15,7 @@
     font-size: 16px;
 }
 
-.shortcut {
-    width: 275px;
-    text-align: left;
-    float: right;
-}
+
 
 .content_displacement {
     padding: 10px 0 0 40px;
@@ -28,10 +24,6 @@
 .light {
     color: #2274c8;
     font-weight: bold;
-}
-
-.shortcut_row {
-    padding: 10 0;
 }
 
 .content_displacement a {
@@ -84,22 +76,6 @@
             </div>
         </div>
     </div>
-    <div class="shortcut">
-        <div class="shortcut_row">
-            <span>获取开发源码</span>
-            <div>
-                <p class="content_displacement">
-                    <a href="https://github.com/leochen36/qmik">github</a>
-                </p>
-            </div>
-        </div>
-        <div class="shortcut_row">
-            <span>帮助文档</span>
-            <div>
-                <p class="content_displacement">
-                    <a href="https://github.com/leochen36/qmik">Qmik API文档</a>
-                </p>
-            </div>
-        </div>
+    <div id="shortcut_module">
     </div>
 </div>
