--- a/example/qmik/view/download.html
+++ b/example/qmik/view/download.html
@@ -53,22 +53,6 @@
             </div>
         </div>
     </div>
-    <div class="shortcut">
-        <div class="shortcut_row">
-            <span>获取开发源码</span>
-            <div>
-                <p class="content_displacement">
-                    <a href="https://github.com/leochen36/qmik">github</a>
-                </p>
-            </div>
-        </div>
-        <div class="shortcut_row">
-            <span>帮助文档</span>
-            <div>
-                <p class="content_displacement">
-                    <a href="https://github.com/leochen36/qmik">Qmik API文档</a>
-                </p>
-            </div>
-        </div>
+    <div id="shortcut_module">
     </div>
 </div>
