--- a/example/qmik/css/index.css
+++ b/example/qmik/css/index.css
@@ -7,6 +7,8 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,a,
 }
 li{
     list-style: none;	
+    border:1px #d6d6d6 solid;
+    clear: none;
 }
 body {
 	margin: 0;
