--- a/example/demo/mvc/style.css
+++ b/example/demo/mvc/style.css
@@ -4,6 +4,10 @@ body,p,img{
 ul,li{
   list-style-type: none;
 }
+a{
+  text-decoration: none;
+  color: #aaa000;
+}
 .ftitle{
   color:#000;
   font-size: 20px;
