--- a/example/demo/mvc/style.css
+++ b/example/demo/mvc/style.css
@@ -3,6 +3,8 @@ body,p,img{
 }
 ul,li{
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 a{
   text-decoration: none;
@@ -22,6 +24,9 @@ a{
   min-width: 100px;
   display: inline-block;
   text-align: center;
+  white-space:nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .loading{
   background: url(loading.gif);
@@ -31,7 +36,7 @@ a{
   display: inline-block;
 }
 li{
-  height: 25px;
+  min-height: 30px;
   vertical-align: middle;
 }
 [q-ctrl=foreach] li{
@@ -43,7 +48,7 @@ li x{
   width: 48%;
 }
 li .lt{
-  width: 100px;
+  width: 140px;
   display: inline-block;
   text-align: right;
   padding-right: 10px;
@@ -58,6 +63,7 @@ input[type=text],select,textarea{
 input[type=text]{
   height: 22px;
   padding: 1px 4px;
+  width: 100px;
 }
 .box{
   border: 1 solid #cfcfcf;
