--- a/example/demo/office/css/style.css
+++ b/example/demo/office/css/style.css
@@ -12,66 +12,314 @@ a{
   text-decoration: none;
   color: #000;
 }
-.nav{
-  width: 240px;
-  height: 100%;
-  position: fixed;
-  background: #F5F2F8;
-  padding: 5px 10px;
-  overflow: auto;
+[q-ctrl]{visibility: hidden;}
+.leftNav{min-height: 300px;max-height: 500px;overflow: hidden;}
+.am-nav{max-height: 500px;}
+.doc-content{min-height: 400px;}
+.c-desc{min-height: 200px;}
+#ds-thread #ds-reset .ds-meta {
+  border-bottom-color: #eee;
 }
-.nav .nav_title{
-  font-weight: 900;
-  font-size: 24px;
+
+.dis-none{display: none;}
+
+/* Like button */
+
+#ds-thread #ds-reset a.ds-like-thread-button {
+  border: 1px solid #ddd;
+  background: #f8f8f8;
+  border-radius: 2px;
 }
-.nav .nav_section{
-  padding: 0px 6px 4px 6px;
+
+
+/* Comments counter */
+
+#ds-thread #ds-reset li.ds-tab a.ds-current {
+  border: 1px solid #ddd;
+  background-color: #f8f8f8;
+  border-radius: 2px;
 }
-.main{
-  margin-left: 270px;
+
+
+#ds-thread #ds-reset #ds-hot-posts {
+  border-color: #eee;
+  border-width: 0 0 1px;
+  margin: 10px 0;
+  padding-bottom: 15px;
+  border-radius: 0;
 }
-.bind{
-  color:#aa00ad;
-  word-break: break-word;
-}
-.loading{
-  background: url(../images/loading.gif);
-  background-size: 100% 100%;
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-}
-li{
-  height: 20px;
-  line-height: 20px;
-  vertical-align: middle;
-}
-li x{
-  display: inline-block;
-  width: 48%;
-}
-li .lt{
-  width: 100px;
-  display: inline-block;
-  text-align: right;
-  padding-right: 10px;
-}
-input[type=text],select,textarea{
-  margin: 2px;
+
+
+/* Main avatar */
+
+#ds-reset .ds-avatar img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
   padding: 1px;
+  background-color: #fff;
+}
+
+
+/* Comments list */
+
+#ds-thread #ds-reset .ds-comments {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0 20px;
+  margin-bottom: 5px;
+}
+
+
+#ds-thread #ds-reset li.ds-post {
+  border-top: none;
+}
+
+
+#ds-thread #ds-reset .ds-post-self {
+  padding: 10px 2px;
+}
+
+
+#ds-thread #ds-reset .ds-comment-body {
+  position: relative;
+  margin-left: 62px;
+  border: 1px solid #ddd;
+  padding: 0 10px 10px!important;
+  border-radius: 2px;
+}
+
+
+#ds-thread #ds-reset .ds-comment-body:before,
+#ds-thread #ds-reset .ds-comment-body:after {
+  position: absolute;
+  top: 8px;
+  left: -8px;
+  right: 100%;
+  width: 0;
+  height: 0;
+  display: block;
+  content: " ";
+  border-color: transparent;
+  border-style: solid solid dotted;
+  border-width: 8px 8px 8px 0;
+  pointer-events: none;
+}
+
+
+#ds-thread #ds-reset .ds-comment-body:before {
+  border-right-color: #dedede;
+  z-index: 1;
+}
+
+
+#ds-thread #ds-reset .ds-comment-body:after {
+  border-right-color: #f8f8f8;
+  margin-left: 1px;
+  z-index: 2;
+}
+
+
+#ds-thread #ds-reset .ds-comment-header {
+  background-color: #f8f8f8;
+  padding: 10px;
+  margin-left: -10px;
+  margin-right: -10px;
+  border-bottom: 1px solid #eee;
+  font-weight: 500;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+
+#ds-thread #ds-reset .ds-comment-body p {
+  font-size: 14px;
+}
+
+
+#ds-thread #ds-reset .ds-comment-footer {
+  margin-top: 15px;
+  font-size: 13px;
+}
+
+
+/* Nested */
+
+#ds-thread #ds-reset #ds-ctx {
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+
+
+#ds-reset #ds-ctx .ds-ctx-entry .ds-avatar {
+  border-radius: 50%;
+}
+
+
+/* Comment textarea */
+
+#ds-thread #ds-reset .ds-textarea-wrapper {
+  background-image: none;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+  border-color: #ddd;
+}
+
+
+#ds-reset .ds-gradient-bg {
+  background: #f8f8f8;
+}
+
+
+#ds-thread #ds-reset .ds-post-options {
+  border-bottom-left-radius: 2px;
+  border-color: #ddd;
+  height: 36px;
+}
+
+
+#ds-thread #ds-reset .ds-sync {
+  line-height: 34px;
+}
+
+
+#ds-thread #ds-reset .ds-toolbar-buttons {
+  top: 8px;
+  left: 10px;
+}
+
+
+#ds-thread #ds-reset .ds-textarea-wrapper textarea {
+  font-size: 14px;
+}
+
+
+/* Post Butoon */
+
+#ds-thread #ds-reset .ds-post-button {
+  border-bottom-right-radius: 2px;
+  background: #3bb4f2;
+  color: #fff;
   text-shadow: none;
-  box-shadow: 0px 0px 0px #fff;
-  border: 1px solid #cfcfcf;
+  box-shadow: none;
+  border: 1px solid #ddd;
+  height: 38px;
 }
-input[type=text]{
-  height: 22px;
-  padding: 1px 4px;
+
+
+#ds-thread #ds-reset .ds-post-button:hover {
+  background: #0f9ae0;
+  color: #fff;
+  text-shadow: none;
 }
-.box{
-  border: 1 solid #cfcfcf;
-  padding: 4px 10px 0 10px;
-  margin: 10px;
+
+
+#ds-thread #ds-reset .ds-post-button:focus,
+#ds-thread #ds-reset .ds-post-button:active {
+  outline: 0;
 }
-.box:nth-child(even){
-  border: 1 solid #E90F66;
+
+
+#ds-thread #ds-reset .ds-paginator {
+  margin-bottom: 20px;
+}
+
+
+#ds-thread #ds-reset .ds-paginator a:hover,
+#ds-thread #ds-reset .ds-paginator a.ds-current {
+  border-radius: 2px;
+  border-color: #ddd;
+}
+
+
+/** Icon - Dependence FontAwesome */
+
+.ds-icon:before,
+.ds-add-emote:before,
+.ds-toolbar-button:before {
+  display: inline-block;
+  font-family: "FontAwesome";
+  font-weight: normal;
+  font-style: normal;
+  vertical-align: baseline;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.ds-icon-heart,
+.ds-icon-reply,
+.ds-icon-like,
+.ds-icon-share,
+.ds-icon-report,
+.ds-icon-delete,
+.ds-icon-settings {
+  line-height: 13px !important;
+  background-image: none !important;
+}
+
+
+.ds-icon-heart:before {
+  content: "\f004";
+  color: #dd514c;
+}
+
+
+.ds-icon-reply:before {
+  content: "\f112";
+}
+
+
+.ds-icon-like:before {
+  content: "\f08a";
+}
+
+
+.ds-icon-share:before {
+  content: "\f064";
+}
+
+
+.ds-icon-report:before {
+  content: "\f06a";
+}
+
+
+.ds-icon-delete:before {
+  content: "\f00d";
+}
+
+
+.ds-icon-settings {
+  font-size: 12px !important;
+}
+
+
+.ds-icon-settings:before {
+  content: "\f013";
+}
+
+
+.ds-add-emote,
+.ds-toolbar-button {
+  line-height: 19px !important;
+  background: none !important;
+  font-size: 18px !important;
+}
+
+
+.ds-add-emote:before {
+  content: "\f118";
+}
+
+
+.ds-add-image:before {
+  content: "\f03e";
+}
+
+
+/* Narrow */
+#ds-thread.ds-narrow #ds-reset .ds-comment-body {
+  margin-left: 45px;
 }
