--- a/example/demo/office/view/helper/core/config.html
+++ b/example/demo/office/view/helper/core/config.html
@@ -1,1 +1,28 @@
-config
+
+<p> Qmik.config() 用于配置运行环境参数</p> 
+
+<p>
+	Qmik.config(map);
+</p>
+<table class="am-table am-table-bd am-table-striped"> 
+  <thead> 
+   <tr> 
+    <th>参数</th> 
+    <th>描述</th> 
+   </tr> 
+  </thead> 
+  <tbody> 
+   <tr> 
+    <td>map</td> 
+    <td>{}对象,{base:'基础路径'}</td>
+   </tr>
+  </tbody> 
+</table> 
+<div class="doc-code demo-highlight"> 
+  <pre class=""><code class="javascript">
+  	Qmik.config({
+
+    });
+  </code></pre> 
+</div> 
+
