--- a/example/demo/office/view/helper/desc/use.html
+++ b/example/demo/office/view/helper/desc/use.html
@@ -1,6 +1,6 @@
 
 
-<h6>查询使用例子</h6> 
+<h6 id="query">查询使用例子</h6> 
 <div class="doc-code demo-highlight"> 
   api采用HTML5原生的方法querySelectorAll来检索,性能最高效,
   但是会存在不同浏览器支持的程度不太一样,下面的写法,浏览器都会支持
@@ -16,7 +16,7 @@
 </div> 
 
 
-<h6>sun模块开发使用例子</h6> 
+<h6 id="sun">sun模块开发使用例子</h6> 
 <div class="doc-code demo-highlight">
   <pre class=""><code class="javascript">
     (function($){
@@ -52,7 +52,7 @@
 </div> 
 
 
-<h6>mvc开发使用例子</h6> 
+<h6 id="mvc">mvc开发使用例子</h6> 
 <div class="doc-code demo-highlight">
   <pre class=""><code class="javascript">
     
@@ -99,7 +99,7 @@
 
 
 
-<h6>ajax使用例子</h6> 
+<h6 id="ajax">ajax使用例子</h6> 
 <div class="doc-code demo-highlight">
   <pre class=""><code class="javascript">
       $.ajax({
@@ -117,7 +117,7 @@
 </div> 
 
 
-<h6>event事件使用例子</h6> 
+<h6 id="event">event事件使用例子</h6> 
 <div class="doc-code demo-highlight">
   <pre class=""><code class="javascript">
       $(function(){
