--- a/example/demo/office/view/helper/core/each.html
+++ b/example/demo/office/view/helper/core/each.html
@@ -1,1 +1,33 @@
-each
+
+<p> Qmik.each() 函数用于遍历指定的对象和数组，并以对象的每个属性(或数组的每个成员)作为上下文来遍历执行指定的函数。</p> 
+所谓的上下文，意即该函数内部的this指针引用了该元素。
+<p>
+	Qmik.delay(function, delay);
+</p>
+<table class="am-table am-table-bd am-table-striped"> 
+  <thead> 
+   <tr> 
+    <th>参数</th> 
+    <th>描述</th> 
+   </tr> 
+  </thead> 
+  <tbody> 
+   <tr> 
+	    <td>function</td> 
+	    <td>执行方法</td>
+   </tr>
+   <tr> 
+	    <td>delay</td> 
+	    <td>延迟执行时间间隔,单位毫秒</td>
+   </tr>
+  </tbody> 
+</table> 
+<div class="doc-code demo-highlight"> 
+  <pre class=""><code class="javascript">
+  	//间隔一秒,总共执行到10秒(这个时间从调用cycle开始计算)
+  	Qmik.delay(function(){
+  		Qmik.log("test delay ", Qmik.now());
+  	}, 1000);
+  </code></pre> 
+</div> 
+
