--- a/example/demo/office/view/helper/core/grep.html
+++ b/example/demo/office/view/helper/core/grep.html
@@ -1,12 +1,35 @@
 
-<p>$.grep(url, callback) 请求script文件</p> 
+<p>Qmik.grep()函数用于使用指定的函数过滤数组中的元素，并返回过滤后的数组。</p> 
 <p>
-	参数:
-		url: 文件地址
-		callback: 请求完回调
+	源数组不会受到影响，过滤结果只反映在返回的结果数组中。
 </p>
+<p>
+	Qmik.grep(array, function);
+</p>
+<table class="am-table am-table-bd am-table-striped"> 
+  <thead> 
+   <tr> 
+    <th>参数</th> 
+    <th>描述</th> 
+   </tr> 
+  </thead> 
+  <tbody> 
+   <tr> 
+    <td>array</td> 
+    <td>数组</td>
+   </tr> 
+   <tr> 
+    <td>function</td> 
+    <td>过滤方法,过滤方法返回true才会增加内容到新数组上,否则不添加</td> 
+   </tr>
+  </tbody> 
+</table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.getScript("/qmik/style.js");
+
+  	var array = Qmik.grep( [1,2,3], function(i, val){
+  		return val % 2 ==0;
+  	});
   </code></pre> 
 </div> 
+
