--- a/example/demo/office/view/helper/core/isArray.html
+++ b/example/demo/office/view/helper/core/isArray.html
@@ -1,6 +1,11 @@
-<p>$.encode(str) 函数可把字符串作为 URI 组件进行编码。使用: encodeURIComponent实现</p> 
+
+<p>Qmik.isArray() 函数判断对象是否是数组</p> 
+<p>
+	Qmik.isArray(array);
+</p>
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.encode("/test/view?name=leo&age=22");
+     	Qmik.isArray([])
   </code></pre> 
 </div> 
+
