--- a/example/demo/office/view/helper/core/isBool.html
+++ b/example/demo/office/view/helper/core/isBool.html
@@ -1,1 +1,11 @@
-isBool
+
+<p>Qmik.isBool() 函数判断对象是否是布尔值</p> 
+<p>
+	Qmik.isBool(bool);
+</p>
+<div class="doc-code demo-highlight"> 
+  <pre class=""><code class="javascript">
+     	Qmik.isArray(true)
+  </code></pre> 
+</div> 
+
