--- a/example/demo/office/view/helper/core/isNumber.html
+++ b/example/demo/office/view/helper/core/isNumber.html
@@ -1,6 +1,11 @@
-<p>$.encode(str) 函数可把字符串作为 URI 组件进行编码。使用: encodeURIComponent实现</p> 
+
+<p>Qmik.isNumber()函数用于判断是否是数字。</p> 
+<p>
+	Qmik.isNumber(value);
+</p>
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.encode("/test/view?name=leo&age=22");
+  	Qmik.isNumber(1);
   </code></pre> 
 </div> 
+
