--- a/example/demo/office/view/helper/core/isPlainObject.html
+++ b/example/demo/office/view/helper/core/isPlainObject.html
@@ -1,1 +1,31 @@
-isPlainObject
+
+<p>Qmik.inherit()函数用于类继承。</p> 
+<p>
+	Qmik.inherit(subClass, superClass);
+</p>
+<table class="am-table am-table-bd am-table-striped"> 
+  <thead> 
+   <tr> 
+    <th>参数</th> 
+    <th>描述</th> 
+   </tr> 
+  </thead> 
+  <tbody> 
+   <tr> 
+    <td>subClass</td> 
+    <td>子类</td>
+   </tr> 
+   <tr> 
+    <td>superClass</td> 
+    <td>父类</td> 
+   </tr>
+  </tbody> 
+</table> 
+<div class="doc-code demo-highlight"> 
+  <pre class=""><code class="javascript">
+  	var array = Qmik.grep( [1,2,3], function(i, val){
+  		return val % 2 ==0;
+  	});
+  </code></pre> 
+</div> 
+
