--- a/example/demo/office/view/index.html
+++ b/example/demo/office/view/index.html
@@ -22,12 +22,13 @@
   <script type="text/javascript" src="../js/config.js"></script> 
  </head> 
  <body> 
+
   <header q-ctrl="header" id="amz-header"> 
    <div class="amz-container am-cf"> 
     <h1></h1> 
     <nav> 
      <ul class="amz-header-nav am-collapse"> 
-      <li><a href="http://amazeui.org/getting-started">开始使用</a></li> 
+      <li><a href="index.html">开始使用</a></li> 
       <li><a href="http://amazeui.org/javascript">JS 插件</a></li> 
       <li><a href="http://amazeui.org/donate">捐助</a></li> 
      </ul> 
@@ -55,22 +56,79 @@
                <h2 id="css-概述">Qmik 概述</h2> 
                <h5>支持情况:webkit内核浏览器(chrome,safari,uc,qq等),IE>=9(推荐>=IE10),火狐</h5> 
                <p>Qmik 大致分为六大部分。</p> 
-               <div q-for="item in model.desc.list" class="am-g c-desc"> 
+               <div class="am-g c-desc"> 
                   <div class="am-u-md-6"> 
                    <div class="am-panel am-panel-default"> 
                     <div class="am-panel-hd">
-                      ${item.title}
+                        核心模块
                     </div> 
                     <div class="am-panel-bd">
-                      ${item.desc} 
+                      提供核心的基础方法 
                     </div> 
                    </div> 
                   </div> 
-               </div> 
+                
+                  <div class="am-u-md-6"> 
+                   <div class="am-panel am-panel-default"> 
+                    <div class="am-panel-hd">
+                      <a href="#query">查询模块</a>
+                    </div> 
+                    <div class="am-panel-bd">
+                      提供dom节点检索功能,与jquery的语法一致 
+                    </div> 
+                   </div> 
+                  </div> 
+                
+                  <div class="am-u-md-6"> 
+                   <div class="am-panel am-panel-default"> 
+                    <div class="am-panel-hd">
+                      <a href="#sun">sun模块开发</a>
+                    </div> 
+                    <div class="am-panel-bd">
+                      提供模块开发功能,基本遵从cmd,amd的使用规范,与seajs使用一致,相当于简化版本,利用此功能,可以做到很好的代码管理 
+                    </div> 
+                   </div> 
+                  </div> 
+                
+                  <div class="am-u-md-6"> 
+                   <div class="am-panel am-panel-default"> 
+                    <div class="am-panel-hd">
+                      <a href="#mvc">mvc开发模式</a>
+                    </div> 
+                    <div class="am-panel-bd">
+                      使前端的各个层之间分开,让业务代码90%不用去关心页面的dom布局,提高50%的开发效率,降低50%的维护成本,完全遵从于面面数据接口编程 
+                    </div> 
+                   </div> 
+                  </div> 
+                
+                  <div class="am-u-md-6"> 
+                   <div class="am-panel am-panel-default"> 
+                    <div class="am-panel-hd">
+                      <a href="#ajax">ajax模块</a>
+                    </div> 
+                    <div class="am-panel-bd">
+                      ajax数据通信模块 
+                    </div> 
+                   </div> 
+                  </div> 
+                
+                  <div class="am-u-md-6"> 
+                   <div class="am-panel am-panel-default"> 
+                    <div class="am-panel-hd">
+                      <a href="#event">event模块</a>
+                    </div> 
+                    <div class="am-panel-bd">
+                      event事件模块 
+                    </div> 
+                   </div> 
+                  </div> 
+               </div>
+
+               <br/>
                <h3>使用例子</h3>
                <div class="v-use-code"></div>
-            </div>
-
+             </div>
+             
             <div class="v-helper dis-none"></div>
         </div> 
     </div> 
