--- a/example/demo/office/view/helper/core/decode.html
+++ b/example/demo/office/view/helper/core/decode.html
@@ -1,8 +1,10 @@
-<p>$.decode(str) 函数可对 $.encode(str) 函数编码的 URI 进行解码。使用:decodeURIComponent 实现</p> 
+<p>
+	Qmik.decode(str) 函数可对 $.encode(str) 函数编码的 URI 进行解码。使用:decodeURIComponent实现
+</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	var val = $.encode("/test/view?name=leo&age=22");
-  	$.decode(val);
+  	var val = Qmik.encode("wq你a2");
+  	Qmik.decode(val);
       
   </code></pre> 
 </div> 
