--- a/example/demo/office/view/helper/core/getCss.html
+++ b/example/demo/office/view/helper/core/getCss.html
@@ -1,5 +1,5 @@
 
-<p>$.getCss(url, callback) 请求css文件</p> 
+<p>Qmik.getCss(url, callback) 请求css文件</p> 
 <p>
 	参数:
 		url: 文件地址
@@ -7,6 +7,6 @@
 </p>
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.getCss("/qmik/style.css");
+  	Qmik.getCss("/qmik/style.css");
   </code></pre> 
 </div> 
