--- a/example/demo/office/view/helper/core/getScript.html
+++ b/example/demo/office/view/helper/core/getScript.html
@@ -1,5 +1,5 @@
 
-<p>$.getScript(url, callback) 请求script文件</p> 
+<p>Qmik.getScript(url, callback) 请求script文件</p> 
 <p>
 	参数:
 		url: 文件地址
@@ -7,6 +7,6 @@
 </p>
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.getScript("/qmik/style.js");
+  	Qmik.getScript("/qmik/style.js");
   </code></pre> 
 </div> 
