--- a/example/demo/office/view/helper/core/isString.html
+++ b/example/demo/office/view/helper/core/isString.html
@@ -1,7 +1,7 @@
 
-<p>$.isString(str) 判断是否是字符串类型</p> 
+<p>Qmik.isString(str) 判断是否是字符串类型</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.isString("qmik");
+      Qmik.isString("qmik");
   </code></pre> 
 </div> 
