--- a/example/demo/office/view/helper/core/isWP.html
+++ b/example/demo/office/view/helper/core/isWP.html
@@ -1,7 +1,7 @@
 
-<p>$.isWP() 判断是否是window phone系统</p> 
+<p>Qmik.isWP() 判断是否是window phone系统</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.isWP();
+      Qmik.isWP();
   </code></pre> 
 </div> 
