--- a/example/demo/office/view/helper/core/warn.html
+++ b/example/demo/office/view/helper/core/warn.html
@@ -1,31 +1,7 @@
 
-<p>Qmik.inherit()函数用于类继承。</p> 
-<p>
-	Qmik.inherit(subClass, superClass);
-</p>
-<table class="am-table am-table-bd am-table-striped"> 
-  <thead> 
-   <tr> 
-    <th>参数</th> 
-    <th>描述</th> 
-   </tr> 
-  </thead> 
-  <tbody> 
-   <tr> 
-    <td>subClass</td> 
-    <td>子类</td>
-   </tr> 
-   <tr> 
-    <td>superClass</td> 
-    <td>父类</td> 
-   </tr>
-  </tbody> 
-</table> 
+<p>$.warn(val1,val2,val3) 打警告日志</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	var array = Qmik.grep( [1,2,3], function(i, val){
-  		return val % 2 ==0;
-  	});
+      $.warn("qmik is good");
   </code></pre> 
 </div> 
-
