--- a/example/demo/office/view/helper/query/show.html
+++ b/example/demo/office/view/helper/query/show.html
@@ -1,11 +1,12 @@
 
-<p>Qmik.isBool() 函数判断对象是否是布尔值</p> 
+<p> Qmik.fn.show()函数用于显示所有匹配的元素</p> 
+
 <p>
-	Qmik.isBool(bool);
+	Qmik.fn.show() 
 </p>
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-     	Qmik.isBool(true)
+  	$("div").show();
   </code></pre> 
 </div> 
 
