--- a/example/demo/office/view/helper/core/encode.html
+++ b/example/demo/office/view/helper/core/encode.html
@@ -1,6 +1,6 @@
-<p>$.encode(str) 函数可把字符串作为 URI 组件进行编码。使用: encodeURIComponent实现</p> 
+<p>Qmik.encode(str) 函数可把字符串作为 URI 组件进行编码。使用: encodeURIComponent实现</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.encode("/test/view?name=leo&age=22");
+      Qmik.encode("age你22");
   </code></pre> 
 </div> 
