--- a/example/demo/office/view/helper/core/isWK.html
+++ b/example/demo/office/view/helper/core/isWK.html
@@ -1,7 +1,7 @@
 
-<p>$.isWK() 判断是否是webkit内核</p> 
+<p>Qmik.isWK() 判断是否是webkit内核</p> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-      $.isWK();
+      Qmik.isWK();
   </code></pre> 
 </div> 
