--- a/example/demo/office/view/helper/core/param.html
+++ b/example/demo/office/view/helper/core/param.html
@@ -1,1 +1,30 @@
-param
+
+<p>Qmik.param()把对象或数组转换为url参数(name=leo&age=22)</p> 
+<p>
+	Qmik.param(object);
+</p>
+<table class="am-table am-table-bd am-table-striped"> 
+  <thead> 
+   <tr> 
+    <th>参数</th> 
+    <th>描述</th> 
+   </tr> 
+  </thead> 
+  <tbody> 
+   <tr> 
+    <td>object</td> 
+    <td>对象,如果是数组,则每个item要包含name,value字段</td>
+   </tr> 
+   <tr> 
+    <td>object2</td> 
+    <td>对象2</td> 
+   </tr>
+  </tbody> 
+</table> 
+<div class="doc-code demo-highlight"> 
+  <pre class=""><code class="javascript">
+  	var object = $.param({name:'leo', age:22});//>> name=leo&age=22
+    var object = $.param([{name:'name',value:'leo'},{name:'age',value:22}]);//>> name=leo&age=22
+  </code></pre> 
+</div> 
+
