--- a/example/demo/office/view/helper/query/append.html
+++ b/example/demo/office/view/helper/query/append.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.append()函数用于向每个匹配元素内部的末尾位置追加指定的内容。</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.append(content) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,14 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>content</td> 
+	    <td>内容,可以是字符串,dom节点,Query对象</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").append('<li>dadf</li>');
   </code></pre> 
 </div> 
 
