--- a/example/demo/office/view/helper/query/appendTo.html
+++ b/example/demo/office/view/helper/query/appendTo.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.appendTo()函数用于将当前所有匹配元素追加到指定元素内部的末尾位置。</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.appendTo(target) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,14 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>target</td> 
+	    <td>目标元素,,dom节点,Query对象</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").appendTo($("body"));
   </code></pre> 
 </div> 
 
