--- a/example/demo/office/view/helper/query/beforeTo.html
+++ b/example/demo/office/view/helper/query/beforeTo.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.beforeTo()函数用于将每个匹配元素插入到指定目前之前的位置。</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+  Qmik.fn.beforeTo(target) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,14 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+      <td>target</td> 
+      <td>内容,dom节点,Query对象</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+    $("div").beboreTo($("body"));
   </code></pre> 
 </div> 
 
