--- a/example/demo/office/view/helper/query/clone.html
+++ b/example/demo/office/view/helper/query/clone.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.clone()函数用于复制节点</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.clone(bool) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,14 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>bool</td> 
+	    <td>选填,布尔值,是否深度复制,默认false</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").clone();
   </code></pre> 
 </div> 
 
