--- a/example/demo/office/view/helper/query/data.html
+++ b/example/demo/office/view/helper/query/data.html
@@ -1,7 +1,8 @@
 
-<p> Qmik.each() 函数用于遍历指定的对象和数组</p> 
+<p> Qmik.fn.data()函数用于设置或返回当前Query对象所匹配的元素的数据</p> 
+
 <p>
-	Qmik.each(object, function);
+	Qmik.fn.data(name, value) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -12,19 +13,21 @@
   </thead> 
   <tbody> 
    <tr> 
-      <td>object</td> 
-      <td>对象或数组</td>
+	    <td>name</td> 
+	    <td>字段名</td>
    </tr>
    <tr> 
-	    <td>function</td> 
-	    <td>执行方法,参数 (index, item)</td>
+      <td>value</td> 
+      <td>值</td>
    </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.each([1,2,3,4,9,7], function(i, item){
-      $.log(i, item)
+  	$("div").data("display", "none");
+    //设置多个也可以下面这样写
+    $("div").data({
+      "display": "none"
     });
   </code></pre> 
 </div> 
