--- a/example/demo/office/view/helper/query/hasClass.html
+++ b/example/demo/office/view/helper/query/hasClass.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.hasClass()函数用于设置或返回当前Query对象是否包含css类名</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.hasClass(name) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,14 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>name</td> 
+	    <td>css类名</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").hasClass("sadf");
   </code></pre> 
 </div> 
 
