--- a/example/demo/office/view/helper/query/html.html
+++ b/example/demo/office/view/helper/query/html.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.html()函数用于设置或返回当前Query对象所匹配的DOM元素内的html内容</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.html([html]) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,15 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>html</td> 
+	    <td>选填,字符串, 如果有值,设置innerHTML,否则返回</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").html();
+  	$("div").html('abc');
   </code></pre> 
 </div> 
 
