--- a/example/demo/office/view/helper/query/last.html
+++ b/example/demo/office/view/helper/query/last.html
@@ -1,11 +1,13 @@
 
-<p>Qmik.isBool() 函数判断对象是否是布尔值</p> 
+<p> Qmik.fn.last() 函数用于返回最后一个qmik元素</p> 
+
 <p>
-	Qmik.isBool(bool);
+	Qmik.fn.last() 
 </p>
+
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-     	Qmik.isBool(true)
+  	 $("div").last();
   </code></pre> 
 </div> 
 
