--- a/example/demo/office/view/helper/query/next.html
+++ b/example/demo/office/view/helper/query/next.html
@@ -1,9 +1,8 @@
 
+<p> Qmik.fn.next()函数用于取元素的后面一个的同级兄弟节点</p> 
+
 <p>
-  Qmik.trim()函数用于去除字符串两端的空白字符。
-</p> 
-<p>
-	Qmik.trim(str);
+	Qmik.fn.next(selecter) 
 </p>
 <table class="am-table am-table-bd am-table-striped"> 
   <thead> 
@@ -14,14 +13,15 @@
   </thead> 
   <tbody> 
    <tr> 
-    <td>str</td> 
-    <td>字符串</td>
-   </tr> 
+	    <td>selecter</td> 
+	    <td>选择器,字符串, css选择器</td>
+   </tr>
   </tbody> 
 </table> 
 <div class="doc-code demo-highlight"> 
   <pre class=""><code class="javascript">
-  	$.trim("asfasdf ");
+  	$("div").next("li");
+  	$("div").next()
   </code></pre> 
 </div> 
 
