--- a/example/demo/office/css/style.css
+++ b/example/demo/office/css/style.css
@@ -13,8 +13,8 @@ a{
   color: #000;
 }
 [q-ctrl]{visibility: hidden;}
-.leftNav{min-height: 300px;max-height: 580px;overflow: hidden;}
-.am-nav{max-height: 580px;}
+.leftNav{min-height: 300px;max-height: 500px;overflow: hidden;}
+.am-nav{max-height: 500px;}
 .doc-content{min-height: 400px;}
 .c-desc{min-height: 200px;}
 #ds-thread #ds-reset .ds-meta {
@@ -22,6 +22,26 @@ a{
 }
 
 .dis-none{display: none;}
+.v-mepay{
+  padding: 0;
+  margin: 0;
+  width: 320px;
+  height: 320px;
+  display: inline-block;
+}
+.offering{
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
+}
+.m-iframe{
+  min-height: 520px;
+  height: 520px;
+  width: 100%;
+}
+.v-main{
+  overflow: hidden;
+}
 
 /* Like button */
 
