--- a/example/demo/office/view/main.html
+++ b/example/demo/office/view/main.html
@@ -7,34 +7,19 @@
   <meta name="description" content="Qmik 是一个移动优先的前端基础框架。" /> 
   <meta name="keywords" content="HTML, HTML5, CSS, CSS3, JS, JavaScript, framework, Qmik,  web development, 前端框架, 开源, Web Components" /> 
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" /> 
-  <title>Qmik</title> 
+  <title>Qmik是一个移动端的HTML5开发框架</title> 
   <meta name="renderer" content="webkit" /> 
   <meta http-equiv="Cache-Control" content="no-siteapp" /> 
   <meta name="apple-mobile-web-app-title" content="Qmik" /> 
-  <meta name="apple-mobile-web-app-capable" content="yes" /> 
+  <meta name="apple-mobile-web-app-capable" content="no" /> 
   <meta name="apple-mobile-web-app-status-bar-style" content="black" /> 
-  <link rel="alternate icon" type="image/png" href="http://a.static.amazeui.org/assets/2.x/i/favicon.png" /> 
-  <link rel="apple-touch-icon-precomposed" href="http://a.static.amazeui.org/assets/2.x/i/app-icon72x72@2x.png" /> 
   <link rel="stylesheet" href="../css/amazeui.css?v=i4unzuke" /> 
   <link rel="stylesheet" href="../css/amaze.css?v=i4unzuke" /> 
   <link rel="stylesheet" type="text/css" href="../css/style.css" /> 
-  <script type="text/javascript" src="../../../../assets/Qmik-debug.all.js"></script>
+  <script type="text/javascript" src="../js/Qmik.js"></script>
   <script type="text/javascript" src="../js/config.js"></script> 
  </head> 
  <body> 
-
-  <header q-ctrl="header" id="amz-header"> 
-   <div class="amz-container am-cf"> 
-    <h1></h1> 
-    <nav> 
-     <ul class="amz-header-nav am-collapse"> 
-      <li><a href="index.html">开始使用</a></li> 
-      <li><a href="http://amazeui.org/javascript">JS 插件</a></li> 
-      <li><a href="http://amazeui.org/donate">捐助</a></li> 
-     </ul> 
-    </nav> 
-   </div> 
-  </header> 
 
   <section class="" id="amz-main" data-tag="css"> 
     <div class="am-g am-g-fixed"> 
@@ -134,24 +119,6 @@
     </div> 
   </section> 
 
-  <footer class="amz-footer"> 
-     <div class="am-g am-g-fixed"> 
-      <div class="col-md-4 col-md-push-8 am-u-md-4 am-u-md-push-8"> 
-       <ul class="amz-social"> 
-       </ul> 
-      </div> 
-      <div class="col-md-8 col-md-pull-4 am-u-md-8 am-u-md-pull-4"> 
-       <ul class="amz-links"> 
-        <li>
-          <a href="https://github.com/leochen36/qmik">githup</a> 
-          | <a href="http://amazeui.org/about/contact" class="am-icon-heart">捐助</a> 
-       </ul> 
-       <p class="amz-cp">&copy; 2015 Inc. Licensed under 
-        <a href="http://opensource.org/licenses/MIT" target="_blank">BSD license</a>. Developed with 
-        <a href="http://www.jetbrains.com/webstorm/" target="_blank">WebStorm</a>.</p> 
-      </div> 
-     </div> 
-  </footer> 
 
   <script type="text/javascript" src="../js/index.js?1"></script>  
  </body>
