--- a/example/demo/office/css/style.css
+++ b/example/demo/office/css/style.css
@@ -20,13 +20,15 @@ a{
 #ds-thread #ds-reset .ds-meta {
   border-bottom-color: #eee;
 }
-
+.offering p{
+  margin: 3px 0;
+}
 .dis-none{display: none;}
 .v-mepay{
   padding: 0;
   margin: 0;
-  width: 320px;
-  height: 320px;
+  width: 240px;
+  height: 240px;
   display: inline-block;
 }
 .offering{
