--- a/example/demo/mvc/style.css
+++ b/example/demo/mvc/style.css
@@ -1,3 +1,13 @@
+/** 界面上有引用变量值的可见文档节点,用g标签来包含,这样就不会被用户看到 ${xxx} {{xxx}} 这种引用,对体验上很有帮助 */
+g, .hide, [q-for] {
+    visibility: hidden;
+}
+
+/** 界面上有for循环引用变量值的可见文档节点,用g标签来包含,这样就不会被用户看到 ${xxx} {{xxx}} 这种引用,对体验上很有帮助 */
+s {
+    text-decoration: none;
+}
+
 body, p, img {
     margin: 0;
     padding: 0;
@@ -15,6 +25,13 @@ a {
     color: #aaa000;
 }
 
+/************************************************/
+/************************************************/
+/************************************************/
+/************************************************/
+/************************************************/
+/************************************************/
+/************************************************/
 .ftitle {
     color: #000;
     font-size: 20px;
@@ -23,14 +40,6 @@ a {
 
 .border1 {
     border: 1px solid #00ccaa;
-}
-
-.q-hide {
-
-}
-
-[q-ctrl] {
-    visibility: hidden;
 }
 
 .bind {
